@startuml COZA_ClassDiagram

title BIỂU ĐỒ LỚP - HỆ THỐNG COZA STORE

class User {
  - id: int
  - name: string
  - email: string
  - password: string
  - role: string
  - phone: string
  - address: string
  - email_verified_at: datetime
  - remember_token: string
  + isAdmin(): bool
  + orders(): hasMany
  + news(): hasMany
  + notifications(): hasMany
  + unreadNotifications()
}

class Category {
  - id: int
  - name: string
  - slug: string
  - description: text
  - image: string
  - is_active: boolean
  + products(): hasMany
}

class Product {
  - id: int
  - category_id: int
  - name: string
  - slug: string
  - description: text
  - price: int
  - sale_price: int
  - stock: int
  - image: string
  - images: array
  - brand: string
  - is_featured: boolean
  - is_active: boolean
  + category(): belongsTo
  + orderItems(): hasMany
  + reviews(): hasMany
  + approvedReviews(): hasMany
  + getAverageRating(): float
  + getTotalReviews(): int
  + getCurrentPrice(): int
  + isOnSale(): bool
}

class Order {
  - id: int
  - user_id: int
  - order_number: string
  - customer_name: string
  - customer_email: string
  - customer_phone: string
  - customer_address: text
  - subtotal: int
  - shipping_fee: int
  - total: int
  - status: string
  - payment_method: string
  - payment_status: string
  - note: text
  + user(): belongsTo
  + items(): hasMany
  + getStatusLabelAttribute(): string
}

class OrderItem {
  - id: int
  - order_id: int
  - product_id: int
  - product_name: string
  - product_image: string
  - price: int
  - quantity: int
  - subtotal: int
  + order(): belongsTo
  + product(): belongsTo
}

class News {
  - id: int
  - title: string
  - slug: string
  - excerpt: text
  - content: text
  - image: string
  - user_id: int
  - is_published: boolean
  - published_at: datetime
  + user(): belongsTo
}

class Review {
  - id: int
  - product_id: int
  - user_id: int
  - rating: int
  - comment: text
  - is_approved: boolean
  + product(): belongsTo
  + user(): belongsTo
}

class Notification {
  - id: int
  - user_id: int
  - type: string
  - title: string
  - message: text
  - data: json
  - read_at: datetime
  + user(): belongsTo
  + markAsRead(): void
  + scopeUnread(): query
  + getIconAttribute(): string
  + getColorAttribute(): string
}

User "1" -- "*" Order
User "1" -- "*" News
User "1" -- "*" Notification
User "1" -- "*" Review
Category "1" -- "*" Product
Order "1" *-- "*" OrderItem
Product "1" -- "*" OrderItem
Product "1" -- "*" Review

@enduml
